@@ -903,6 +903,9 @@ IATI出版社
 #search_donor_txt
 捐赠者
 
+#search_status_txt
+状态
+
 #search_sector_txt
 扇形
 
