@@ -933,6 +933,9 @@ Recipient Country
 #search_donor_txt
 Donor
 
+#search_status_txt
+Status
+
 #search_sector_txt
 Sector
 
