@@ -902,8 +902,11 @@ Modifier Les Paramètres
 #search_recipient_txt
 Destinataire
 
-#search_funder_txt
+#search_donor_txt
 Donateur
+
+#search_status_txt
+Statut
 
 #search_sector_txt
 Secteur
