@@ -902,6 +902,9 @@ IATI प्रकाशक
 #search_donor_txt
 दाता
 
+#search_status_txt
+स्थिति
+
 #search_sector_txt
 क्षेत्र
 
