@@ -905,6 +905,9 @@ IATI出版
 #search_donor_txt
 ドナー
 
+#search_status_txt
+状態
+
 #search_sector_txt
 セクター
 
