@@ -902,6 +902,9 @@ Beneficiario
 #search_donor_txt
 Donante
 
+#search_status_txt
+Estado
+
 #search_sector_txt
 Sector
 
