@@ -1,3 +1,10 @@
+Development Portal (2017-07-31 shi)
+==============================
+Added back country and publisher list to Explore page
+Added translations for Status dropdown
+Added original and high icons for Status
+
+
 Development Portal (2017-07-28 shi)
 ==============================
 Added font css for Google translate in SAVi
